# AREF

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  codebase_onboarding.md  docker-compose.yml  pyproject.toml
aref/: __init__.py
aref/absorption/: __init__.py  blast_radius.py  bulkhead.py  circuit_breaker.py  degradation.py  rate_limiter.py
aref/adaptation/: __init__.py  decision_tree.py  engine.py  feature_flags.py  scaler.py  traffic_shifter.py
aref/cli/: __init__.py  main.py
aref/core/: __init__.py  config.py  events.py  logging.py  metrics.py  models.py
aref/dashboard/: __init__.py  app.py  background.py  bootstrap.py  engines.py  seed_data.py
aref/detection/: __init__.py  anomaly.py  engine.py  sli_tracker.py  synthetic.py  threshold.py
aref/evolution/: __init__.py  engine.py  knowledge_base.py  patterns.py  post_incident.py  tracker.py
aref/maturity/: __init__.py  model.py
aref/recovery/: __init__.py  engine.py  runbooks.py
chaos/: __init__.py  experiments.py  injector.py
config/: prometheus.yml
docs/assets/: AREF_Framework_v2.0.0.docx
docs/standards/: DOCSTRING_STANDARDS.md
runbooks/: payment_failure.yml
scripts/: __init__.py  demo.py
services/: __init__.py  base.py  state.py
services/gateway/: __init__.py  gateway_app.py
services/inventory/: __init__.py  inventory_app.py
services/notifications/: __init__.py  notifications_app.py
services/orders/: __init__.py  orders_app.py
services/payments/: __init__.py  payments_app.py
tests/: __init__.py
tests/integration/: __init__.py  test_full_pipeline.py
tests/unit/: __init__.py  test_core.py  test_dashboard_routes.py  (+3 more)
(+9 files in other folders)
